force-app/main/default/objects/PF_TestCases__c/PF_TestCases__c.object-meta.xml
<CustomObject>
    <description>This is where project test cases will be captured within the ProjectForce application.</description>
    <label>Test Case</label>
    <nameField>
        <displayFormat>TC-{00000}</displayFormat>
        <label>Test Case #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>