force-app/main/default/objects/PF_TestCases__c/fields/PF_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>PF_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the person responsible for this Testcase.</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Test_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>