force-app/main/default/objects/PF_TestCases__c/fields/PF_Description__c.field-meta.xml
<CustomField>
    <fullName>PF_Description__c</fullName>
    <inlineHelpText>Provide the description of the Test case</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>