force-app/main/default/objects/PF_TestCases__c/fields/PF_First_Pass_Rate__c.field-meta.xml
<CustomField>
    <fullName>PF_First_Pass_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>First Pass Result</inlineHelpText>
    <label>First Pass</label>
    <type>Checkbox</type>
</CustomField>