force-app/main/default/objects/PF_TestCases__c/fields/PF_QA__c.field-meta.xml
<CustomField>
    <fullName>PF_QA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QA</label>
    <type>Checkbox</type>
</CustomField>