force-app/main/default/objects/PF_TestCases__c/fields/PF_Regression__c.field-meta.xml
<CustomField>
    <fullName>PF_Regression__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this if this Test case is related to regression Test.</inlineHelpText>
    <label>Regression</label>
    <type>Checkbox</type>
</CustomField>