force-app/main/default/objects/PF_TestCases__c/fields/PF_SIT__c.field-meta.xml
<CustomField>
    <fullName>PF_SIT__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this if this Test case is related to QA/SIT .</inlineHelpText>
    <label>QA/SIT</label>
    <type>Checkbox</type>
</CustomField>