force-app/main/default/objects/PF_TestCases__c/fields/PF_Status__c.field-meta.xml
<CustomField>
    <fullName>PF_Status__c</fullName>
    <inlineHelpText>Contains the status of the Test case.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Ready for Execution</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>