force-app/main/default/objects/PF_TestCases__c/fields/PF_Story__c.field-meta.xml
<CustomField>
    <fullName>PF_Story__c</fullName>
    <inlineHelpText>Select the Story against which this test case is written</inlineHelpText>
    <label>Story</label>
    <referenceTo>PF_Stories__c</referenceTo>
    <relationshipLabel>Test Cases</relationshipLabel>
    <relationshipName>Test_Cases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>