force-app/main/default/objects/PF_TestCases__c/fields/PF_Task__c.field-meta.xml
<CustomField>
    <fullName>PF_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the Task against which this test case is written</inlineHelpText>
    <label>Task</label>
    <referenceTo>PF_Tasks__c</referenceTo>
    <relationshipLabel>Test Cases</relationshipLabel>
    <relationshipName>Test_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>