force-app/main/default/objects/PF_TestCases__c/fields/PF_TC_Creation_Effort__c.field-meta.xml
<CustomField>
    <fullName>PF_TC_Creation_Effort__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Provide effort which is required to create Test case (In Hours)</inlineHelpText>
    <label>TC Creation Effort</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>