force-app/main/default/objects/PF_TestCases__c/fields/PF_Test_Plan_Date__c.field-meta.xml
<CustomField>
    <fullName>PF_Test_Plan_Date__c</fullName>
    <inlineHelpText>Provide the Plan date on which Test case needs to be executed.</inlineHelpText>
    <label>Test Plan Date</label>
    <type>Date</type>
</CustomField>