force-app/main/default/objects/PF_TestCases__c/fields/PF_Total_Defects__c.field-meta.xml
<CustomField>
    <fullName>PF_Total_Defects__c</fullName>
    <inlineHelpText>contains Total # defects related to this Test case.</inlineHelpText>
    <label>Total Defects</label>
    <summaryFilterItems>
        <field>PF_Defects__c.PF_Testing_Cycle__c</field>
        <operation>equals</operation>
        <value>SIT</value>
    </summaryFilterItems>
    <summaryForeignKey>PF_Defects__c.PF_Test_Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>