force-app/main/default/objects/PF_TestCases__c/fields/PF_Total_Test_Case_Execution__c.field-meta.xml
<CustomField>
    <fullName>PF_Total_Test_Case_Execution__c</fullName>
    <inlineHelpText>Number of SIT test case excecutions</inlineHelpText>
    <label>Total QA/SIT Execution</label>
    <summaryFilterItems>
        <field>PF_TestCaseExecution__c.PF_Test_Execution_Type__c</field>
        <operation>equals</operation>
        <value>SIT</value>
    </summaryFilterItems>
    <summaryForeignKey>PF_TestCaseExecution__c.PF_Test_Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>