force-app/main/default/objects/PF_TestCases__c/fields/PF_UAT__c.field-meta.xml
<CustomField>
    <fullName>PF_UAT__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this if this Test case is related to UAT .</inlineHelpText>
    <label>UAT</label>
    <type>Checkbox</type>
</CustomField>