force-app/main/default/objects/PF_TestCases__c/fields/PF_Unit__c.field-meta.xml
<CustomField>
    <fullName>PF_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this if this Test case is for unit testing .</inlineHelpText>
    <label>Unit</label>
    <type>Checkbox</type>
</CustomField>