force-app/main/default/objects/PF_TestCases__c/recordTypes/PF_Test_Case.recordType-meta.xml
<RecordType>
    <fullName>PF_Test_Case</fullName>
    <active>true</active>
    <description>Standard pForce record type.</description>
    <label>Test Case</label>
</RecordType>