force-app/main/default/objects/PF_TestCases__c/validationRules/Testing_Phase_must_be_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Testing_Phase_must_be_selected</fullName>
    <active>true</active>
    <description>At least one of the Unit / SIT / UAT phase must be selected.</description>
    <errorConditionFormula>!PF_UAT__c &amp;&amp;  !PF_Unit__c &amp;&amp; !PF_SIT__c</errorConditionFormula>
    <errorMessage>At least one of the Unit / SIT / UAT phase must be selected.</errorMessage>
</ValidationRule>