force-app/main/default/objects/PF_TestCases__c/listViews/PF_All.listView-meta.xml
<ListView>
    <fullName>PF_All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>